--- a/preparation.ipynb
+++ b/preparation.ipynb
@@ -2,16 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: cycler==0.10.0 in c:\\users\\guidi\\anaconda3\\lib\\site-packages (from -r requirements.txt (line 1)) (0.10.0)\n",
+      "Requirement already satisfied: decorator==4.4.2 in c:\\users\\guidi\\anaconda3\\lib\\site-packages (from -r requirements.txt (line 2)) (4.4.2)\n",
+      "Requirement already satisfied: kiwisolver==1.3.1 in c:\\users\\guidi\\anaconda3\\lib\\site-packages (from -r requirements.txt (line 3)) (1.3.1)\n",
+      "Requirement already satisfied: matplotlib==3.4.0 in c:\\users\\guidi\\anaconda3\\lib\\site-packages (from -r requirements.txt (line 4)) (3.4.0)\n",
+      "Obtaining networkx from git+https://github.com/GuidiSara/networkx.git@06ef187506c895797992f4e19d4bca9d3d2aae10#egg=networkx (from -r requirements.txt (line 5))\n",
+      "  Skipping because already up-to-date.\n",
+      "Requirement already satisfied: numpy==1.20.2 in c:\\users\\guidi\\anaconda3\\lib\\site-packages (from -r requirements.txt (line 6)) (1.20.2)\n",
+      "Requirement already satisfied: pandas==1.2.3 in c:\\users\\guidi\\anaconda3\\lib\\site-packages (from -r requirements.txt (line 7)) (1.2.3)\n",
+      "Requirement already satisfied: Pillow==8.1.2 in c:\\users\\guidi\\anaconda3\\lib\\site-packages (from -r requirements.txt (line 8)) (8.1.2)\n",
+      "Requirement already satisfied: pyparsing==2.4.7 in c:\\users\\guidi\\anaconda3\\lib\\site-packages (from -r requirements.txt (line 9)) (2.4.7)\n",
+      "Requirement already satisfied: python-dateutil==2.8.1 in c:\\users\\guidi\\anaconda3\\lib\\site-packages (from -r requirements.txt (line 10)) (2.8.1)\n",
+      "Requirement already satisfied: pytz==2021.1 in c:\\users\\guidi\\anaconda3\\lib\\site-packages (from -r requirements.txt (line 11)) (2021.1)\n",
+      "Requirement already satisfied: scipy==1.6.2 in c:\\users\\guidi\\anaconda3\\lib\\site-packages (from -r requirements.txt (line 12)) (1.6.2)\n",
+      "Requirement already satisfied: six==1.15.0 in c:\\users\\guidi\\anaconda3\\lib\\site-packages (from -r requirements.txt (line 13)) (1.15.0)\n",
+      "Installing collected packages: networkx\n",
+      "  Attempting uninstall: networkx\n",
+      "    Found existing installation: networkx 2.6rc1.dev0\n",
+      "    Uninstalling networkx-2.6rc1.dev0:\n",
+      "      Successfully uninstalled networkx-2.6rc1.dev0\n",
+      "  Running setup.py develop for networkx\n",
+      "Successfully installed networkx\n"
+     ]
+    }
+   ],
    "source": [
     "!pip3 install -r requirements.txt\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +232,7 @@
        "[4 rows x 23 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +449,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +492,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +876,7 @@
        "[5199 rows x 23 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
