--- a/training.ipynb
+++ b/training.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -38,8 +40,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,15 +59,56 @@
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.metrics import plot_confusion_matrix\n",
     "from sklearn.feature_selection import SelectKBest\n",
-    "from sklearn.feature_selection import chi2"
+    "from sklearn.feature_selection import chi2\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.svm import SVC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 99,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "test = pd.read_csv('./test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = pd.read_csv('./train.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dataset visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Describe test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -234,19 +284,25 @@
        "[4 rows x 23 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test = pd.read_csv('./test.csv')\n",
     "test.describe()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Describe training"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -423,20 +479,25 @@
        "[4 rows x 23 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train = pd.read_csv('./train.csv')\n",
-    "\n",
     "train.describe()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Head training"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +702,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,9 +712,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Head test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -857,7 +927,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,8 +937,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Type train"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +977,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,8 +987,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Type test"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -943,18 +1027,25 @@
        "dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train.dtypes"
+    "test.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Missing values\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +1087,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1130,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1050,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,8 +1150,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Encoding"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1068,8 +1166,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Encoding training"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1100,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1237,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1142,8 +1247,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Encoding Test"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1174,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1318,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1217,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1534,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1433,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1750,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1648,157 +1760,103 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    1\n",
-       "1    0\n",
-       "2    0\n",
-       "3    0\n",
-       "4    1\n",
-       "Name: class, dtype: int32"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": [
+    "# Separated dataset from labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "features = train.columns.drop('class')\n",
     "x_train = train[features]\n",
-    "y_train = train['class']\n",
-    "y_train.head()\n"
+    "y_train = train['class']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    0\n",
-       "1    1\n",
-       "2    0\n",
-       "3    1\n",
-       "4    1\n",
-       "Name: class, dtype: int32"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x_test = test[features]\n",
-    "y_test = test['class']\n",
-    "y_test.head()"
+    "y_test = test['class']\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 29,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "100.0"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "\n",
-    "tree = DecisionTreeClassifier()\n",
-    "tree.fit(x_train, y_train)\n",
-    "tree.score(x_train, y_train)*100"
+    "# Accuracy"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "100.0"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "tree.fit(x_test, y_test)\n",
-    "tree.score(x_test, y_test)*100"
+    "Decision tree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "98.23\n"
+      "Accuracy of training set: 100.0%\n",
+      "Accuracy of test set: 100.0%\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.svm import SVC\n",
-    " \n",
+    "tree = DecisionTreeClassifier()\n",
+    "tree.fit(x_train, y_train)\n",
+    "tree.fit(x_test, y_test)\n",
+    "print(f'Accuracy of training set: {tree.score(x_train, y_train)*100}%')\n",
+    "print(f'Accuracy of test set: {tree.score(x_train, y_train)*100}%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SVC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of Training set: 98.23 %\n",
+      "Accuracy of Test set: 96.08 %\n"
+     ]
+    }
+   ],
+   "source": [
     "svc = SVC()\n",
     "svc.fit(x_train, y_train)\n",
     "y_pred = svc.predict(x_test)\n",
-    "acc_svc = round(accuracy_score(y_pred, y_test) * 100, 2)\n",
-    "print(acc_svc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "96.08\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.svm import SVC\n",
-    " \n",
-    "svc = SVC()\n",
+    "acc_svc_training = round(accuracy_score(y_pred, y_test) * 100, 2)\n",
+    "\n",
     "svc.fit(x_test, y_test)\n",
     "y_pred = svc.predict(x_test)\n",
-    "acc_svc = round(accuracy_score(y_pred, y_test) * 100, 2)\n",
-    "print(acc_svc)"
+    "acc_svc_test = round(accuracy_score(y_pred, y_test) * 100, 2)\n",
+    "\n",
+    "print(f'Accuracy of Training set: {acc_svc_training} %')\n",
+    "print(f'Accuracy of Test set: {acc_svc_test} %')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
